[package]
name = "statechart"
description = "statecharts: hierarchical, reactive state machines"
license = "MIT"
version = "0.0.1"
documentation = "https://docs.rs/statechart"
repository = "https://github.com/cmars/statechart"
authors = ["Casey Marshall <github@cmars.tech>"]
keywords = ["statechart", "hierarchical", "state", "machine"]

[dependencies]
derive_builder = "0.5.0"
chrono = "0.4.0"
