[package]
name = "statechart"
description = "statecharts: hierarchical, reactive state machines"
license = "MIT"
version = "0.0.8"
documentation = "https://docs.rs/statechart"
repository = "https://github.com/cmars/statechart"
authors = ["Casey Marshall <github@cmars.tech>"]
keywords = ["statechart", "state-machine", "reactive", "event-driven"]
readme = "README.md"

[badges]
travis-ci = { repository = "cmars/statechart" }

[dependencies]
chrono = "0.4.0"
derive_builder = "0.5.0"
env_logger = "0.4.3"
futures = "0.1"
log = "0.3.8"
